<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_SysPar" Id="{b6caf71d-6c8e-4555-adc6-c35cd0ac3bdc}">
    <Declaration><![CDATA[TYPE ST_SysPar :
STRUCT
	InMoldDrying					: ST_IMDSysPar;
	ProductHandling					: ST_ProductHandlingSysPar;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>