<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_HydraulicsMainMachPar" Id="{fa1e80a4-43e8-4a27-95c0-5ad3a779f1ee}">
    <Declaration><![CDATA[TYPE ST_HydraulicsMainMachPar :
STRUCT
	TempOilCoolingOn			: REAL:= 45;
	TempOilCoolingOff			: REAL:= 30;
	OverTemperature				: REAL:= 50;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>