<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_TransferMoldErrors" Id="{891babd8-6100-4e00-954e-204ae3c1dd7b}">
    <Declaration><![CDATA[TYPE ST_TransferMoldErrors :
STRUCT
	HydraulicCilinder			: ST_HydraulicErrorsAnalog;

	Error1: BOOL;
	Error2: BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>